# ClipCutter

./: .env.example  .gitignore  Dockerfile  README.md  clipcutter.py  pyproject.toml  requirements.txt
